--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "image-downloader": "^3.3.0",
     "react-scripts": "1.1.1",
     "redux-devtools": "^3.4.1"
   },
