--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "redux-devtools": "^3.4.1"
   },
   "dependencies": {
+    "debounce": "^1.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
