--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "10_days_of_code",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "image-downloader": "^3.3.0",
-    "react-scripts": "1.1.1",
-    "redux-devtools": "^3.4.1"
-  },
-  "dependencies": {
-    "debounce": "^1.1.0",
-    "font-awesome": "^4.7.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "hero-hub",
+    "version": "1.0.0",
+    "scripts": {
+        "client": "cd client && npm start",
+        "server": "nodemon server.js",
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    },
+    "dependencies": {
+        "express": "^4.16.3",
+        "request": "^2.85.0"
+    },
+    "devDependencies": {
+        "concurrently": "^3.5.1"
+    }
 }
